# kasui

./: .clang-format  CMakeLists.txt  README.md  TODO.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/fonts/: small.spr
app/src/main/assets/shaders/: 3d_texture_color.vert  flat.vert  frag_color.glsl  frag_texture_uniform_alpha.glsl  frag_timer_text.glsl  grid_background.vert  sprite.frag  sprite.vert  sprite_2c.vert  text_gradient.frag  vert_intro_text.glsl  vert_texture_alpha.glsl
app/src/main/cpp/: CMakeLists.txt  action.h  android_main.cpp  background.cpp  background.h  bakudan_sprite.cpp  bakudan_sprite.h  clouds_theme.h  combo_sprite.cpp  combo_sprite.h  credits.cpp  credits.h  falling_leaves_theme.cpp  falling_leaves_theme.h  flowers_theme.cpp  flowers_theme.h  fonts.cpp  fonts.h  gl_check.h  hint_animation.cpp  hint_animation.h  hiscore_input.cpp  hiscore_list.cpp  http_request.cpp  in_game.cpp  in_game_menu.cpp  in_game_menu.h  jukugo.cpp  jukugo_info_sprite.cpp  jukugo_info_sprite.h  kanji_info.cpp  kasui.cpp  kasui.h  leaderboard_page.cpp  leaderboard_page.h  line_splitter.h  log.h  main.cpp  main_menu.cpp  main_menu.h  (+30 more)
app/src/main/cpp/guava2d/: CMakeLists.txt  file.cpp  file.h  font_manager.h  g2dgl.h  gl_buffer.cpp  gl_buffer.h  panic.cpp  pixmap.cpp  pixmap.h  program.cpp  program.h  rgb.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h  vertex_array.h
app/src/main/cpp/libpng/: CMakeLists.txt
app/src/main/java/org/fzort/games/audio/: AudioClip.java  AudioManager.java
app/src/main/java/org/fzort/games/kasui/: Kasui.java
assets/data/: jukugo  settings  tutorial
assets/fonts/: large.spr  medium.spr  title.spr
assets/shaders/: flat.frag  frag_flat.glsl  frag_text.glsl  frag_text_outline.glsl  frag_text_outline_alpha.glsl  frag_texture_color.glsl  intro_text.frag  text_no_outline.frag  vert_color.glsl  vert_grid_background.glsl  vert_texture_color.glsl
guava2d/: CMakeLists.txt  Makefile  draw_queue.cpp  draw_queue.h  file.cpp  font.cpp  font.h  font_manager.cpp  font_manager.h  g2dgl.h  panic.cpp  panic.h  pixmap.cpp  program.h  shader.cpp  shader.h  sprite.cpp  sprite.h  sprite_manager.cpp  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h  vec2.h  vec3.h  xwchar.cpp  xwchar.h
kasui/: CMakeLists.txt  Makefile  action.cpp  action.h  background.cpp  background.h  bakudan_sprite.cpp  bakudan_sprite.h  block_info.cpp  block_info.h  clouds_theme.cpp  clouds_theme.h  combo_sprite.cpp  combo_sprite.h  common.h  credits.cpp  credits.h  draw_text.cpp  draw_text.h  falling_leaves_theme.cpp  falling_leaves_theme.h  flowers_theme.cpp  flowers_theme.h  gl_check.h  hint_animation.cpp  hint_animation.h  hiscore_input.cpp  hiscore_input.h  hiscore_list.cpp  hiscore_list.h  http_request.cpp  http_request.h  in_game.cpp  in_game.h  in_game_menu.cpp  in_game_menu.h  jukugo.cpp  jukugo.h  jukugo_info_sprite.cpp  jukugo_info_sprite.h  (+64 more)
kasui/assets/data/: kanji
kasui/assets/fonts/: gameover.spr  micro.spr  tiny.spr
kasui/assets/shaders/: credits_text_inner.frag  credits_text_outline.frag  frag_intro_text.glsl  frag_text_alpha.glsl  frag_text_gradient.glsl  frag_text_outline_gradient.glsl  frag_texture_alpha.glsl  frag_texture_decal.glsl  frag_texture_uniform_color.glsl  sprite.vert  vert_3d_texture_color.glsl  vert_flat.glsl  vert_texture_decal.glsl  vert_texture_gradient.glsl
kasui/assets/sprites/: sprites.spr
kasui/data/: jukugo-hits  options
